UiPath.FreeRdpClient/UiPath.FreeRdpWrapper/FreeRdpWrapper.h

#pragma once

#include "pch.h"

namespace FreeRdpClient
{
	typedef struct
	{
		long Width;
		long Height;
		long Depth;
		BOOL FontSmoothing;
		BSTR User;
		BSTR Domain;
		BSTR Pass;
		BSTR ScopeName;
		BSTR ClientName;
		BSTR HostName;
		long Port;
	} ConnectOptions;

	using pFreeRdpDisconnectedCallback = void (*)(BSTR);

	EXTERN_C __declspec(dllexport) HRESULT STDAPICALLTYPE
	    RdpLogon(
			ConnectOptions* rdpOptions,
			BSTR& releaseEventName);
	EXTERN_C __declspec(dllexport) HRESULT STDAPICALLTYPE RdpRelease(BSTR releaseEventName);
	EXTERN_C __declspec(dllexport) HRESULT STDAPICALLTYPE SetDisconnectCallback(pFreeRdpDisconnectedCallback disconnectCallback);
}